  with a single awk program.
  * Plugins (Solaris): netstat: "exists $ARGV[0]" does not work with perl <
  5.6.0. use "defined $ARGV[0]".
  * Plugins (Solaris): memory: Rewrite the value computation as a single nawk
  program. Support scale factor "K" (gives values < 1).
  * Plugins (Linux): port_: Correct offset error in TCP6 code.

munin (1.2.3)

  * Main: Remove stdout output (Deb#302502).
  * Node: Added support for optional "user" settings in node.
  * Node: Allow "root" for the per-plugin "group" directive.
  * Plugins: sort drives in generic/hddtemp_smartcl (SF#1174847).
  * Plugins: Fix autoconf for linux/{nfsd,nfs_client}.
  * Plugins: Make linux/sensors_ handle multiline output better (Deb#300690).
  * Plugins: generic/postfix_mailstats now treats reject-lines better
    (Deb#302220).
  * Plugins: Made generic/postfix_mailvolume autoconf less eager.

munin (1.2.2)

  * Plugins: Correct history loss in linux/{df,df_inode}.
  * Plugins: Avoid negative spike in generic/exim_mailstats.

munin (1.2.1)
  * Main: fix the file vs. pipe check in munin-limits.
  * Main: place the munin-limits lock file in rundir, not dbdir.
  * Main: Make sure all rrd-tunes are correct after an upgrade (Deb#296454,
    Deb#296645).
  * Main: Better handling of broken connections (Deb#298108).
  * Main: HTML cleanup (Deb#296676).
  * Main: Re-enable width/height attributes to img tags.
  * Main: Escape regexps more properly (Deb#296575).
  * Main: Correct expires-headers in CGI output (SF#1159742).
  * Node: munin-node-configure now properly respect user plugins.
  * Plugin: generic/amavis now has configurable logfile location (Deb#296533).
  * Plugin: linux/irqstats should no longer fail on some systems (Deb#296452).
  * Plugin: modified graph_args of generic/apache_processes, to work around
    an rrdtool bug (Deb#296528).
  * Plugins: All plugins using logtail now properly detect its format
    (Deb#297628).
  * Plugins: sunos/memory repaired (SF#1143610).