@@ -452,8 +452,8 @@ sub run_service {
 sub get_fq_hostname {
     my $hostname;
     eval {
-        require Net::Domain;
-        $hostname = Net::Domain::hostfqdn();
+        require Sys::Hostname;
+        $hostname = (gethostbyname(Sys::Hostname::hostname()))[0];
     };
     return $hostname if $hostname;
 
